Fix screen layout on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,8 @@ button {
   transition: filter 0.3s ease;
 }
 
+@media only screen and (min-width: 768px) {
+  html, body {
+    min-height: 100%;
+  }
+}
